Fixed spacing issue

--- a/css/screen.css
+++ b/css/screen.css
@@ -23,13 +23,13 @@ img {
 
 }
 
-#left {
+.left {
   float: left;
   padding-left: 20%;
   max-width: 60%;
   height: 40%;
 }
-#right {
+.right {
   float: right;
   max-width: 50%;
   height: 20%;
@@ -73,4 +73,3 @@ header{
   .nav ul{
     padding: 0;
     }
-}
